--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/server.js",
+    "vercel-build": "npm run build",
     "lint": "eslint ./src"
   },
   "keywords": [],
