--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "vercel-build": "npm run build",
+    "build": "npm run lint",
     "lint": "eslint ./src"
   },
   "keywords": [],
