--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "nodemon ./src/server.js",
     "build": "npm run lint",
+     "build": "npm run build", // Sesuaikan dengan perintah pembangunan Anda
+     "vercel-build": "npm run build"
     "lint": "eslint ./src"
   },
   "keywords": [],
